Adicionar desafio 04 (#557)
* Adicionar desafio 04

* Corrigir problema de espaçamento

Co-authored-by: Gabriel Mendonça <gabriel.mendonca@agenciamop.com.br>
Co-authored-by: Marcelo Pinheiro <mpinheir@users.noreply.github.com>