@@ -1,13 +1,6 @@
 # trabalho_04
 
 Esta folha do repositorio tem como objetivo armazenar a solução do desafio 14.
-Há um aviso da lib que estou usando, isto ocorre em razão da versão do JDK usada, provavelmente ao usar o JDK8 a warning some!. 
-
-"WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by groovy.lang.MetaClassImpl$14 (file:/home/alverad/.m2/repository/groovy/groovy-all-1.0-jsr/06/groovy-all-1.0-jsr-06.jar) to method java.lang.Object.finalize()
-WARNING: Please consider reporting this to the maintainers of groovy.lang.MetaClassImpl$14
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release"
 
 # Requisitos
 
